# neural-xarm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gui.h  main.cpp  main.py  requirements.txt  shader.h  test.md  view.cpp  xarm-s3.stl  xarm-s4.stl  xarm-s6.stl  xarm-sbase.stl  xarm.mtl  xarm_control.py
assets/: xarm-s3.stl  xarm-s4.mtl  xarm-s5.mtl  xarm-s5.stl  xarm-s6.mtl  xarm-s6.stl  xarm-sbase.mtl
include/: camera.h  common.h  frametime.h  image.h  mesh.h  segment.h  shader.h  shader_program.h  text.h  texture.h  ui_element.h  ui_slider.h  ui_text.h  ui_toggle.h  util.h
shader/: fragment.glsl  text_vertex_shader.glsl  vertex.glsl
shaders/: fragment.glsl  text_fragment_shader.glsl  text_vertex_shader.glsl  vertex.glsl
src/: camera.cpp  common.cpp  main.cpp  mesh.cpp  shader.cpp  shader_program.cpp  text.cpp  texture.cpp  ui_element.cpp  ui_slider.cpp  ui_text.cpp  ui_toggle.cpp
test/: eventsnippet.cpp  test.ino  test_gui.cpp
